# sample-scientific-tools-on-amazon-bedrock-agentcore-gateway

./: .gitignore  README.md  app.py  cdk.json  delete_agentcore.py  demo.py  deploy_agentcore.py  get_token.py  plot_benchmark.py  pyproject.toml  pytest.ini
agent/: agent.py  pyproject.toml  utils.py
cognito/: README.md  __init__.py  cdk.json  cognito_config.py  cognito_stack.py  get_token.py  requirements.txt
cognito/tests/: README.md  __init__.py  conftest.py
cognito/tests/unit/: __init__.py  test_cognito_config.py  test_config_validation.py  test_stack_basic.py
gateway/: README.md  cdk.json  deploy_agentcore_gateway.py  gateway_stack.py
vep_endpoint/: README.md  __init__.py  vep_endpoint_stack.py
vep_endpoint/examples/: benchmark.py  invoke_endpoint.py  invoke_lambda.py
vep_endpoint/inference_code/: __init__.py  inference.py  requirements.txt
vep_endpoint/lambda_function/: README.md  __init__.py  cloudwatch_integration.py  get_results.py  invoke_endpoint.py  lambda_function.py  requirements.txt  schema.json  validators.py
vep_endpoint/lambda_function/tests/: README.md  __init__.py  conftest.py  test_cloudwatch_integration.py  test_get_results.py  test_invoke_endpoint.py  test_lambda_function.py  test_validators.py
vep_endpoint/tests/: README.md  __init__.py  conftest.py  pytest.ini
vep_endpoint/tests/unit/: test_config_validation.py  test_stack_basic.py
